Alteração na cor do botão hover

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
-    --botao-azul-claro: #6aa5ed;
+    --botao-azul-claro: #72aaef;
     --cor-fundo: #00030C;
     --fonte-principal: "inter";
 }
